<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SlidingPaneLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sp1"
    android:layout_width="match_parent" 
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="85dip"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="12dip"
        android:background="@drawable/starstrip" >
        <ImageButton
            android:id="@+id/ib_earth"
            android:src="@drawable/ib_states"
            android:contentDescription="@string/ib_earth"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/ib_venus"
            android:src="@drawable/ib2_states"
            android:contentDescription="@string/ib_venus"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/ib_jupiter"
            android:src="@drawable/ib3_states"
            android:contentDescription="@string/ib_jupiter"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/ib_neptune"
            android:src="@drawable/ib4_states"
            android:contentDescription="@string/ib_neptune"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/ib_mars"
            android:src="@drawable/ib5_states"
            android:contentDescription="@string/ib_mars"
            android:background="#00000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/uiPane"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dip"
        android:paddingLeft="4dip"
        android:background="@drawable/plasma1080">
        <ImageView
            android:id="@+id/iv1"
            android:background="@drawable/ib_earth_normal"
            android:contentDescription="earth image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp" />
        <TextView
            android:text="@string/planet_name_earth"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/tv1" />
        <ImageView
            android:id="@+id/iv2"
            android:background="@drawable/listviewdiv"
            android:contentDescription="divider line image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/planet_mass_earth"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dip"
            android:paddingLeft="30dip"
            android:shadowColor="#77000000"
            android:shadowDx="-2.4"
            android:shadowDy="2.4"
            android:shadowRadius="1.2"
            android:textSize="16sp"
            android:id="@+id/tv2" />
        <TextView
            android:text="@string/planet_grav_earth"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dip"
            android:paddingLeft="30dip"
            android:shadowColor="#77000000"
            android:shadowDx="-2.4"
            android:shadowDy="2.4"
            android:shadowRadius="1.2"
            android:textSize="16sp"
            android:id="@+id/tv3" />
        <TextView
            android:text="@string/planet_size_earth"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dip"
            android:paddingLeft="30dip"
            android:shadowColor="#77000000"
            android:shadowDx="-2.4"
            android:shadowDy="2.4"
            android:shadowRadius="1.2"
            android:textSize="16sp"
            android:id="@+id/tv4" />
    </LinearLayout>
</android.support.v4.widget.SlidingPaneLayout>